--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t networth-tracker:${{ github.sha }} . -f networth-tracker-backend/Dockerfile
+        docker build -t networth-tracker:${{ github.sha }} .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -40,8 +40,8 @@ jobs:
      
     - name: Push Docker image
       run: |
-        docker tag networth-tracker:${{ github.sha }} your-dockerhub-username/networth-tracker-backend:${{ github.sha }}
-        docker push your-dockerhub-username/networth-tracker-backend:${{ github.sha }}
+        docker tag networth-tracker:${{ github.sha }} ${{secrets.DOCKER_USERNAME}}/networth-tracker-backend:${{ github.sha }}
+        docker push ${{secrets.DOCKER_USERNAME}}/networth-tracker-backend:${{ github.sha }}
 
   deploy:
     needs: build
