--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,33 +30,29 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t registry.heroku.com/hapi-js/web .
+        docker build -t networth-tracker:${{ github.sha }} .
 
-    - name: Log in to Heroku Container Registry
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: |
-        echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
-
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push Docker image
       run: |
-        docker push registry.heroku.com/hapi-js/web
+        docker tag networth-tracker:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/networth-tracker-backend:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/networth-tracker-backend:${{ github.sha }}
 
   deploy:
     needs: build
     runs-on: self-hosted
 
     steps:
-    # - name: Log in to Heroku
-    #   run: |
-    #     echo ${{ secrets.HEROKU_API_KEY }} | docker login --username=_ --password-stdin registry.heroku.com
+    - name: Log in to Heroku
+      run: |
+        echo ${{ secrets.HEROKU_API_KEY }} | docker login --username=_ --password-stdin registry.heroku.com
 
     - name: Push and Release to Heroku
       run: |
+        heroku container:set web --image=docker.io/${{ secrets.DOCKER_USERNAME }}/networth-tracker-backend:${{ github.sha }} -a hapi-js
         heroku container:release web --app hapi-js
